Correct core alignment CSS
Use margin not padding... cute.

--- a/wf-content/css/wf-css-core-structure.css
+++ b/wf-content/css/wf-css-core-structure.css
@@ -4,16 +4,16 @@
  *
  * @package Wonderflux
  * @since 0.1
- * @updated 1.1
+ * @updated 2.0
  */
 /** Positioning and styling **/
 html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td { margin: 0; padding: 0; border: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: inherit; vertical-align: baseline; }
 body { line-height: 1.5; }
 html { font-size: 100.01%; }
 body { font-size: 75%; color: #222; background: #fff; font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
-.alignright, .align-right { float: right; padding-left: 20px; padding-bottom: 10px; }
-.alignleft, .align-left { float: left; padding-right: 20px; padding-bottom: 10px; }
-.aligncenter, .align-center { text-align: center; padding: 0 20px 0 20px; }
+.alignright, .align-right { float: right; margin: 5px 0 5px 20px; }
+.alignleft, .align-left { float: left; margin: 5px 20px 5px 0; }
+.aligncenter, .align-center { text-align: center; margin: 5px auto; }
 .first, .flush-left { margin-left: 0; padding-left: 0; }
 .last, .flush-right { margin-right: 0; padding-right: 0; }
 .top, .flush-top { margin-top: 0; padding-top: 0; }
